--- a/.github/workflows/ebbs_daily-schedule.yml
+++ b/.github/workflows/ebbs_daily-schedule.yml
@@ -19,6 +19,7 @@ jobs:
       run: |
         pip install ebbs
         pip install eot
+        pip install CloudFlare
     - name: Build
       env:
         repo_username: ${{ secrets.INFRASTRUCTURE_USERNAME }}
